bottom lips simulated

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         <input type="range" min="-100" max="100" value="0" id="slider_RTx">
         <input type="range" min="-100" max="100" value="0" id="slider_RTy">
     </div>
+    <div class="slidecontainerDL">
+        <p>Downside lips <span id="DL"></span></p>
+        <input type="range" min="0" max="100" value="0" id="slider_DL">
+    </div>
+    <div class="slidecontainerDR">
+        <p>Downside lips <span id="DR"></span></p>
+        <input type="range" min="0" max="100" value="0" id="slider_DR">
+    </div>
 	<script src="src/index.js"></script>
 </body>
 
