upper, bottom lips simulated version 2

--- a/index.html
+++ b/index.html
@@ -12,30 +12,28 @@
 <body>
     <div class="slidecontainerLT">
         <p>LT <span id="LTx"></span>, <span id="LTy"></span></p>
-        <input type="range" min="-100" max="100" value="0" id="slider_LTx">
-        <input type="range" min="-100" max="100" value="0" id="slider_LTy">
+        <input type="range" min="-50" max="50" value="0" id="slider_LTx">
+        <input type="range" min="-50" max="50" value="0" id="slider_LTy">
     </div>
     <div class="slidecontainerLB">
-        <p>LB <span id="LBx"></span>, <span id="LBy"></span></p>
-        <input type="range" min="-100" max="100" value="0" id="slider_LBx">
-        <input type="range" min="-100" max="100" value="0" id="slider_LBy">
+        <p>LB <span id="LBdeg"></span></p>
+        <input type="range" min="-90" max="90" value="0" id="slider_LBdeg">
     </div>
     <div class="slidecontainerRB">
-        <p>RB <span id="RBx"></span>, <span id="RBy"></span></p>
-        <input type="range" min="-100" max="100" value="0" id="slider_RBx">
-        <input type="range" min="-100" max="100" value="0" id="slider_RBy">
+        <p>RB <span id="RBdeg"></span></p>
+        <input type="range" min="-90" max="90" value="0" id="slider_RBdeg">
     </div>
     <div class="slidecontainerRT">
         <p>RT <span id="RTx"></span>, <span id="RTy"></span></p>
-        <input type="range" min="-100" max="100" value="0" id="slider_RTx">
-        <input type="range" min="-100" max="100" value="0" id="slider_RTy">
+        <input type="range" min="-50" max="50" value="0" id="slider_RTx">
+        <input type="range" min="-50" max="50" value="0" id="slider_RTy">
     </div>
     <div class="slidecontainerDL">
-        <p>Downside lips <span id="DL"></span></p>
+        <p>Bottom lips: Left<span id="DL"></span></p>
         <input type="range" min="0" max="100" value="0" id="slider_DL">
     </div>
     <div class="slidecontainerDR">
-        <p>Downside lips <span id="DR"></span></p>
+        <p>Bottom lips: Right<span id="DR"></span></p>
         <input type="range" min="0" max="100" value="0" id="slider_DR">
     </div>
 	<script src="src/index.js"></script>
