sliders for eyebrows test added

--- a/index.html
+++ b/index.html
@@ -29,12 +29,28 @@
         <input type="range" min="-50" max="50" value="0" id="slider_RTy">
     </div>
     <div class="slidecontainerDL">
-        <p>Bottom lips: Left<span id="DL"></span></p>
+        <p>Bottom lips: Left <span id="DL"></span></p>
         <input type="range" min="0" max="100" value="0" id="slider_DL">
     </div>
     <div class="slidecontainerDR">
-        <p>Bottom lips: Right<span id="DR"></span></p>
+        <p>Bottom lips: Right <span id="DR"></span></p>
         <input type="range" min="0" max="100" value="0" id="slider_DR">
+    </div>
+    <div class="slidecontainerLTBrow">
+        <p>Left Top Eyebrow <span id="LTBrow"></span></p>
+        <input type="range" min="0" max="100" value="0" id="slider_LTBrow">
+    </div>
+    <div class="slidecontainerLBBrow">
+        <p>Left Bottom Eyebrow <span id="LBBrow"></span></p>
+        <input type="range" min="0" max="100" value="0" id="slider_LBBrow">
+    </div>
+    <div class="slidecontainerRTBrow">
+        <p>Right Top Eyebrow <span id="RTBrow"></span></p>
+        <input type="range" min="0" max="100" value="0" id="slider_RTBrow">
+    </div>
+    <div class="slidecontainerRBBrow">
+        <p>Right Bottom Eyebrow <span id="RBBrow"></span></p>
+        <input type="range" min="0" max="100" value="0" id="slider_RBBrow">
     </div>
 	<script src="src/index.js"></script>
 </body>
