Eye direction changes added; 360deg

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         <p>Right Bottom Eyebrow <span id="RBBrow"></span></p>
         <input type="range" min="0" max="100" value="0" id="slider_RBBrow">
     </div>
+    <div class="slidecontainerEyeDir">
+        <p>Eyes Dir: <span id="EyeDist"></span>, <span id="EyeAngle"></span></p>
+        <input type="range" min="0" max="10" value="0" id="slider_EyeDist">
+        <input type="range" min="-180" max="180" value="0" id="slider_EyeAngle">
+    </div>
 	<script src="src/index.js"></script>
 </body>
 
