--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
         <input type="range" min="0" max="10" value="0" id="slider_EyeDist">
         <input type="range" min="-180" max="180" value="0" id="slider_EyeAngle">
     </div>
+    <div class="buttonEmotion">
+        <input type="button" value="default" id="defaultButton">
+        <input type="button" value="happy" id="happyButton">
+    </div>
 	<script src="src/index.js"></script>
 </body>
 
