--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
     <div class="buttonEmotion">
         <input type="button" value="default" id="defaultButton">
         <input type="button" value="happy" id="happyButton">
+        <input type="button" value="smile" id="smileButton">
+        <input type="button" value="annoy" id="annoyButton">
+        <input type="button" value="angry" id="angryButton">
+        <input type="button" value="laugh" id="laughButton">
+        <input type="button" value="surprise" id="surpriseButton">
+        <input type="button" value="sleepy" id="sleepyButton">
+        <input type="button" value="disapprove0" id="disapprove0Button">
+        <input type="button" value="disapprove1" id="disapprove1Button">
+        <input type="button" value="sneer" id="sneerButton">
+        <input type="button" value="disgust" id="disgustButton">
     </div>
 	<script src="src/index.js"></script>
 </body>
