--- a/index.html
+++ b/index.html
@@ -2,28 +2,29 @@
 <html>
 
 <head>
-	<title>Parcel Sandbox</title>
+	<title>D3 Face</title>
     <style>
         @import url("src/styles.css");
     </style>
 	<meta charset="UTF-8" />
 </head>
 
-<body>
-    <div class="buttonEmotion">
-        <input type="button" value="default" id="defaultButton">
-        <input type="button" value="happy" id="happyButton">
-        <input type="button" value="smile" id="smileButton">
-        <input type="button" value="annoy" id="annoyButton">
-        <input type="button" value="angry" id="angryButton">
-        <input type="button" value="laugh" id="laughButton">
-        <input type="button" value="surprise" id="surpriseButton">
-        <input type="button" value="sleepy" id="sleepyButton">
-        <input type="button" value="disapprove0" id="disapprove0Button">
-        <input type="button" value="disapprove1" id="disapprove1Button">
-        <input type="button" value="sneer" id="sneerButton">
-        <input type="button" value="disgust" id="disgustButton">
+<body>    
+    <div class="emotionTab">
+        <input class="emotionButton" type="button" value="default" id="defaultButton">
+        <input class="emotionButton" type="button" value="happy" id="happyButton">
+        <input class="emotionButton" type="button" value="smile" id="smileButton">
+        <input class="emotionButton" type="button" value="annoy" id="annoyButton">
+        <input class="emotionButton" type="button" value="angry" id="angryButton">
+        <input class="emotionButton" type="button" value="laugh" id="laughButton">
+        <input class="emotionButton" type="button" value="surprise" id="surpriseButton">
+        <input class="emotionButton" type="button" value="sleepy" id="sleepyButton">
+        <input class="emotionButton" type="button" value="disapprove0" id="disapprove0Button">
+        <input class="emotionButton" type="button" value="disapprove1" id="disapprove1Button">
+        <input class="emotionButton" type="button" value="sneer" id="sneerButton">
+        <input class="emotionButton" type="button" value="disgust" id="disgustButton">
     </div>
+    
 	<script src="src/index.js"></script>
 </body>
 
